<?xml version="1.0" encoding="utf-8"?>
<FrameLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app2="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Framelayout">

    <ImageView
        android:id="@+id/imageView2"
        android:layout_width="555dp"
        android:layout_height="827dp"
        android:contentDescription="@string/app_name"
        app2:srcCompat="@drawable/mercy_png" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <ImageView
            android:id="@+id/imageView6"
            android:layout_width="164dp"
            android:layout_height="153dp"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:contentDescription="@string/app_name"
            app2:srcCompat="@drawable/lomer_png" />

        <Button
            android:id="@+id/button2"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="16dp"
            android:layout_marginTop="50dp"
            android:text="@string/Tombol1"/>

        <Button
            android:id="@+id/button3"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="225dp"
            android:layout_marginTop="-50dp"
            android:text="@string/Tombol2" />

        <Button
            android:id="@+id/button4"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/mp" />

        <Button
            android:id="@+id/button5"
            android:layout_width="138dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="270dp"
            android:text="@string/right" />

        <Button
            android:id="@+id/button6"
            android:layout_marginEnd="100dp"
            android:layout_width="136dp"
            android:layout_height="wrap_content"
            android:layout_marginStart="10dp"
            android:layout_marginTop="50dp"
            android:text="@string/left"/>

    </LinearLayout>


</FrameLayout>